# OAP

./: .gitignore  LICENSE  README.md  pyproject.toml
oap/: __init__.py  cli.py  config.py  envelope.py  registry.py  router.py  runs.py
oap-demo/: research_agent.py  translator_agent.py  writer_agent.py
oap/adapters/: __init__.py  base.py  http.py  mock.py
oap/llm/: __init__.py  base.py  bedrock.py  custom.py  factory.py  ollama.py  openai.py  router_prompt.py
oap/transport/: __init__.py  http.py
tests/: fake_agent_server.py  test_chain.py  test_cli.py  test_envelope.py  test_http_adapter.py  test_register.py  test_registry.py  test_router.py  test_transport.py
tests/test_llm/: test_bedrock.py  test_config.py  test_ollama.py  test_openai.py  test_router_llm.py
