[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent-protocol"
version = "0.2.2"
description = "Open Agent Protocol — a routing layer for inter-agent task handoff"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OAP Contributors" }]
keywords = ["agents", "routing", "llm", "multi-agent", "task-handoff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
]

[project.urls]
Repository = "https://github.com/Adam-Abinsha-vahab-Baker/OAP"
Issues = "https://github.com/Adam-Abinsha-vahab-Baker/OAP/issues"

[project.scripts]
oap = "oap.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["oap"]
